- Implementa alterações de cores em alguns layouts. - Versão.1.0 concluída

--- a/app/src/main/res/layout/activity_nivel1.xml
+++ b/app/src/main/res/layout/activity_nivel1.xml
@@ -14,11 +14,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="14dp"
-        android:layout_marginLeft="14dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="9dp"
         android:text="@string/jogador_nome"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
@@ -32,7 +32,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="36dp"
         android:text="@string/total_score"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
@@ -42,11 +42,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="63dp"
         android:text="@string/et_vidas"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <ImageView
@@ -109,7 +109,6 @@
         android:id="@+id/editText_resultado"
         android:layout_width="100dp"
         android:layout_height="40dp"
-        android:importantForAutofill="no"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
@@ -124,7 +123,9 @@
         android:layout_marginBottom="217dp"
         android:ems="10"
         android:hint="@string/et_resposta"
-        android:inputType="number" tools:targetApi="o"/>
+        android:importantForAutofill="no"
+        android:inputType="number"
+        tools:targetApi="o" />
 
     <Button
         android:id="@+id/button"
