--- a/app/src/main/res/layout/activity_nivel5.xml
+++ b/app/src/main/res/layout/activity_nivel5.xml
@@ -18,7 +18,7 @@
         android:layout_marginLeft="14dp"
         android:layout_marginTop="9dp"
         android:text="@string/jogador_nome"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
@@ -32,7 +32,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginTop="36dp"
         android:text="@string/total_score"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <TextView
@@ -42,11 +42,11 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="17dp"
-        android:layout_marginLeft="17dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
         android:layout_marginTop="63dp"
         android:text="@string/et_vidas"
-        android:textColor="@android:color/background_dark"
+        android:textColor="@color/colorPrimaryDark"
         android:textSize="18sp" />
 
     <ImageView
